plang/testing/logs/false-incorrect/93/program93.p.p
tfIwy (iN1jx) (T) (v (ehoR g63M rfcj)) :- nsZ (V) (W62) (XLc) (Z); tR (t dkbGX NMx4 sD6 j) (CcKq) (H) (Im5).
vo (l2z6L (kWm2U AT (lhp4 W084 (ST) (Rky)) O7J gJ) J (Hyn4V) e2pYY) :- ((dXlQ), pVXo eW (f7 (kpF) J kXq Jyo); (foiNv (azr (Y3d2) (KAT) (ke (i bTJ DUg) Enr Nc A) (Wo3n)) (H) n9), v8OsJ (NC5) T), cc YVDqh, (jzbUt c Sn (NhKyp) gvVEv, pdbE Rj BQom mN (j (G6WZO) aLIrs), (ckEs o1t (Zg))).
t Q (pZk lK (n6 (squ2Y mcRQ p) IY E3i)) (sKR pfUK (alLa) cBJ) :- dnw7 (fKtm (xr)) b0Q Y87 xG, (dHIhA (cHj M Z1hYz M (Qsp))); (nlO (SF); (i (i1 (uYse vNM (e SUl (Pf) tsNvn) (t5iz (j4a rf (fx s (aQky C Dr (WwA) (ApkqW)) M Vb6) X))) k33Dt o) dC6uI XaxzI gP)).


v (bSQ J (qy0 im (LCc7) (M)) Zu6).

fn (uoSb (t JgEd lO (abl3))) gvjNz.

qdTo Lu (f2 Ar (aF) E1Pu dRk) (HfSyR) hlPl :- (e (Dze)); etk0D (gofe (c (kjJm (HmoD))) (Gl)); i MaHa (j EEZ2d A Fg) (nmj) (UHBa); (nknN), gpF (NK87) (Q) (N8z) BdkIC.
xO.

gwM (fhJjd (AX) kCba4 (ZDiJ)) CPmGo.

? (v o vn), rT1 uPZw Fq5 (aXbS PSX (CV60y) OZ) U1; ((rM)); yAuC (wVBo (yd6ef ewjI (yy) (EO) (R)) OxBM PW8 tNuq) rwV H.


